# AccelerateGS

./: .gitignore  CMakeLists.txt  README.md  config.cfg
DemoSketches/pca_test/: pca_test.pde
Evaluation/: eval.py
Evaluation/testing/: pyvenv.cfg
docs/: main.aux  main.fdb_latexmk  main.fls  main.tex  related_works.tex
docs/TFM/: conclusion.tex  intro.tex  lod.tex  main.acn  main.acr  main.alg  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  main.toc  merging.tex  overview.tex  performance.tex  refs.bib  related_works.tex  rendering.tex  results.tex  space_division.tex
docs/TFM/svg-inkscape/: 100_Detail_Level_svg-tex.pdf_tex  50_Detail_Level_svg-tex.pdf_tex  blending_svg-tex.pdf_tex  bsp_svg-tex.pdf_tex  granularity_svg-tex.pdf_tex  init_profile_svg-tex.pdf_tex  merged_model_svg-tex.pdf_tex  octree_bbox_svg-tex.pdf_tex  octree_diff_svg-tex.pdf_tex  opacity_sum_svg-tex.pdf_tex  panel_lods_svg-tex.pdf_tex  perceived_opacity_svg-tex.pdf_tex  railing_lod_svg-tex.pdf_tex  sorted_keys_svg-tex.pdf_tex  sorting key_svg-tex.pdf_tex  speedup_svg-tex.pdf_tex  split_svg-tex.pdf_tex  system_svg-tex.pdf_tex  totaltree_svg-tex.pdf_tex  truck_50_svg-tex.pdf_tex  truck_75_svg-tex.pdf_tex  truck_sample_svg-tex.pdf_tex  variation_svg-tex.pdf_tex
src/: CameraLoader.h  GUIManager.h  GaussianBVH.h  GaussianOctree.h  HybridVH.h  OctreeSerializer.cuh  PLYReader.h  PointClustering.h  SpacePartitioningBase.h  main.cu  raster_helper.cuh  render.cuh
src/glad/: glad.h
